--- a/WaysToSolveFizzBuzz.ipynb
+++ b/WaysToSolveFizzBuzz.ipynb
@@ -368,15 +368,17 @@
     }
    ],
    "source": [
-    "for num in range(1,101):\n",
-    " string = \"\"\n",
-    " if num % 3 == 0:\n",
-    "    string = string + \"Fizz\"\n",
-    " if num % 5 == 0:\n",
-    "    string = string + \"Buzz\"\n",
-    " if num % 5 != 0 and num % 3 != 0:\n",
-    "    string = string + str(num)\n",
-    " print(string)"
+    "for fizzbuzz in range(101):\n",
+    "    if fizzbuzz % 3 == 0 and fizzbuzz % 5 == 0:\n",
+    "        print(\"fizzbuzz\")\n",
+    "        continue\n",
+    "    elif fizzbuzz % 3 == 0:\n",
+    "        print(\"fizz\")\n",
+    "        continue\n",
+    "    elif fizzbuzz % 5 == 0:\n",
+    "        print(\"buzz\")\n",
+    "        continue\n",
+    "    print(fizzbuzz)"
    ]
   },
   {
