--- a/WaysToSolveFizzBuzz.ipynb
+++ b/WaysToSolveFizzBuzz.ipynb
@@ -368,17 +368,17 @@
     }
    ],
    "source": [
-    "for fizzbuzz in range(101):\n",
-    "    if fizzbuzz % 3 == 0 and fizzbuzz % 5 == 0:\n",
+    "for num in range(101):\n",
+    "    if num % 3 == 0 and num % 5 == 0:\n",
     "        print(\"fizzbuzz\")\n",
     "        continue\n",
-    "    elif fizzbuzz % 3 == 0:\n",
+    "    elif num % 3 == 0:\n",
     "        print(\"fizz\")\n",
     "        continue\n",
-    "    elif fizzbuzz % 5 == 0:\n",
+    "    elif num % 5 == 0:\n",
     "        print(\"buzz\")\n",
     "        continue\n",
-    "    print(fizzbuzz)"
+    "    print(num)"
    ]
   },
   {
