FizzBuzzing Steps for Students

--- a/WaysToSolveFizzBuzz.ipynb
+++ b/WaysToSolveFizzBuzz.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "FizzBuzz CONDITIONAL STATEMENTS"
+    "FizzBuzz printing numbers from 0 to 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -125,6 +125,530 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "variation: FizzBuzz printing numbers from 0 to 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(101):\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fizzing the numbers that are divisible by 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fizz\n",
+      "1\n",
+      "2\n",
+      "Fizz\n",
+      "4\n",
+      "5\n",
+      "Fizz\n",
+      "7\n",
+      "8\n",
+      "Fizz\n",
+      "10\n",
+      "11\n",
+      "Fizz\n",
+      "13\n",
+      "14\n",
+      "Fizz\n",
+      "16\n",
+      "17\n",
+      "Fizz\n",
+      "19\n",
+      "20\n",
+      "Fizz\n",
+      "22\n",
+      "23\n",
+      "Fizz\n",
+      "25\n",
+      "26\n",
+      "Fizz\n",
+      "28\n",
+      "29\n",
+      "Fizz\n",
+      "31\n",
+      "32\n",
+      "Fizz\n",
+      "34\n",
+      "35\n",
+      "Fizz\n",
+      "37\n",
+      "38\n",
+      "Fizz\n",
+      "40\n",
+      "41\n",
+      "Fizz\n",
+      "43\n",
+      "44\n",
+      "Fizz\n",
+      "46\n",
+      "47\n",
+      "Fizz\n",
+      "49\n",
+      "50\n",
+      "Fizz\n",
+      "52\n",
+      "53\n",
+      "Fizz\n",
+      "55\n",
+      "56\n",
+      "Fizz\n",
+      "58\n",
+      "59\n",
+      "Fizz\n",
+      "61\n",
+      "62\n",
+      "Fizz\n",
+      "64\n",
+      "65\n",
+      "Fizz\n",
+      "67\n",
+      "68\n",
+      "Fizz\n",
+      "70\n",
+      "71\n",
+      "Fizz\n",
+      "73\n",
+      "74\n",
+      "Fizz\n",
+      "76\n",
+      "77\n",
+      "Fizz\n",
+      "79\n",
+      "80\n",
+      "Fizz\n",
+      "82\n",
+      "83\n",
+      "Fizz\n",
+      "85\n",
+      "86\n",
+      "Fizz\n",
+      "88\n",
+      "89\n",
+      "Fizz\n",
+      "91\n",
+      "92\n",
+      "Fizz\n",
+      "94\n",
+      "95\n",
+      "Fizz\n",
+      "97\n",
+      "98\n",
+      "Fizz\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(101):\n",
+    "    \n",
+    "    if num % 3 == 0:\n",
+    "        print(\"Fizz\")\n",
+    "    else:\n",
+    "        print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Buzzing the numbers that are divisible by 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buzz\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "Buzz\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "Buzz\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "Buzz\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "Buzz\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "Buzz\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "Buzz\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "Buzz\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "Buzz\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "Buzz\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "Buzz\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "Buzz\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "Buzz\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "Buzz\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "Buzz\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "Buzz\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "Buzz\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "Buzz\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "Buzz\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "Buzz\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n",
+      "Buzz\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(101):\n",
+    "\n",
+    "    if num % 5 == 0:\n",
+    "        print(\"Buzz\")    \n",
+    "    else:\n",
+    "        print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FizzBuzzing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fizzbuzz\n",
+      "1\n",
+      "2\n",
+      "fizz\n",
+      "4\n",
+      "buzz\n",
+      "fizz\n",
+      "7\n",
+      "8\n",
+      "fizz\n",
+      "buzz\n",
+      "11\n",
+      "fizz\n",
+      "13\n",
+      "14\n",
+      "fizzbuzz\n",
+      "16\n",
+      "17\n",
+      "fizz\n",
+      "19\n",
+      "buzz\n",
+      "fizz\n",
+      "22\n",
+      "23\n",
+      "fizz\n",
+      "buzz\n",
+      "26\n",
+      "fizz\n",
+      "28\n",
+      "29\n",
+      "fizzbuzz\n",
+      "31\n",
+      "32\n",
+      "fizz\n",
+      "34\n",
+      "buzz\n",
+      "fizz\n",
+      "37\n",
+      "38\n",
+      "fizz\n",
+      "buzz\n",
+      "41\n",
+      "fizz\n",
+      "43\n",
+      "44\n",
+      "fizzbuzz\n",
+      "46\n",
+      "47\n",
+      "fizz\n",
+      "49\n",
+      "buzz\n",
+      "fizz\n",
+      "52\n",
+      "53\n",
+      "fizz\n",
+      "buzz\n",
+      "56\n",
+      "fizz\n",
+      "58\n",
+      "59\n",
+      "fizzbuzz\n",
+      "61\n",
+      "62\n",
+      "fizz\n",
+      "64\n",
+      "buzz\n",
+      "fizz\n",
+      "67\n",
+      "68\n",
+      "fizz\n",
+      "buzz\n",
+      "71\n",
+      "fizz\n",
+      "73\n",
+      "74\n",
+      "fizzbuzz\n",
+      "76\n",
+      "77\n",
+      "fizz\n",
+      "79\n",
+      "buzz\n",
+      "fizz\n",
+      "82\n",
+      "83\n",
+      "fizz\n",
+      "buzz\n",
+      "86\n",
+      "fizz\n",
+      "88\n",
+      "89\n",
+      "fizzbuzz\n",
+      "91\n",
+      "92\n",
+      "fizz\n",
+      "94\n",
+      "buzz\n",
+      "fizz\n",
+      "97\n",
+      "98\n",
+      "fizz\n",
+      "buzz\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(101):\n",
+    "    if num % 3 == 0 and num % 5 == 0:\n",
+    "        print(\"fizzbuzz\")\n",
+    "        continue\n",
+    "    elif num % 3 == 0:\n",
+    "        print(\"fizz\")\n",
+    "        continue\n",
+    "    elif num % 5 == 0:\n",
+    "        print(\"buzz\")\n",
+    "        continue\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FizzBuzz STRING CONCATENATION"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -133,6 +657,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "FizzBuzz\n",
       "1\n",
       "2\n",
       "Fizz\n",
@@ -237,7 +762,7 @@
     }
    ],
    "source": [
-    "for num in range(1,101):\n",
+    "for num in range(101):\n",
     "    string = \"\"\n",
     "    if num % 3 == 0:\n",
     "        string = string + \"Fizz\"\n",
@@ -246,13 +771,6 @@
     "    if num % 5 != 0 and num % 3 != 0:\n",
     "        string = string + str(num)\n",
     "    print(string)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "FizzBuzz STRING CONCATENATION"
    ]
   },
   {
@@ -390,13 +908,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "FizzBuzz\n",
       "1\n",
       "2\n",
       "Fizz\n",
@@ -501,7 +1020,7 @@
     }
    ],
    "source": [
-    "print(*map(lambda i: 'Fizz'*(not i%3)+'Buzz'*(not i%5) or i, range(1,101)),sep='\\n')"
+    "print(*map(lambda i: 'Fizz'*(not i%3)+'Buzz'*(not i%5) or i, range(101)),sep='\\n')"
    ]
   }
  ],
@@ -521,7 +1040,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
